# aiohttp-tampermonkey

./: README.md  pyproject.toml  pytest.ini
aiohttp_tampermonkey/: __init__.py  client.py  monkeypatch.py
